refactor: rename posts to articles
